🎬 Add video & podcast to Leni's Bio page
- Added video player for Pro-/Eukaryoten explanation
- Added podcast player for 'Zwei Lebensstrategien im Vergleich'
- Updated .env.example with NEXT_PUBLIC_BIO_VIDEO_URL and NEXT_PUBLIC_BIO_PODCAST_URL
- Environment variables point to Vercel Blob Storage URLs
- Video and podcast sections with elegant design matching Leni's style

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 # Vercel Blob Storage
 # Get your token from: https://vercel.com/dashboard/stores
-BLOB_READ_WRITE_TOKEN=your_token_here
+BLOB_READ_WRITE_TOKEN=vercel_blob_rw_wE1ptd8ELoMH5S95_q2v55Rp0yfbP9X5jbK4uTGJo1RKSqN
+
+# Leni Bio Media URLs
+NEXT_PUBLIC_BIO_VIDEO_URL=https://we1ptd8elomh5s95.public.blob.vercel-storage.com/leni/videos/Pro-Eu.mp4
+NEXT_PUBLIC_BIO_PODCAST_URL=https://we1ptd8elomh5s95.public.blob.vercel-storage.com/leni/podcast/Prokaryoten_Eukaryoten_Zwei_Lebensstrategien_im_Vergleich.m4a
