🎯 Add complete Onboarding system with Supabase integration
Features:
- Supabase client setup with TypeScript types
- Context provider for state management across flow
- 5-step onboarding flow with progress tracking
- Parent info collection (name, email)
- Child info collection (name, age, grade)
- 10-question learning profile questionnaire
- 5-question mascot designer
- Success page with confetti celebration
- All data saved to Supabase (families, children, learning_profiles, mascots)
- Fallback env vars for build compatibility
- 13 new files created

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,12 @@ BLOB_READ_WRITE_TOKEN=vercel_blob_rw_wE1ptd8ELoMH5S95_q2v55Rp0yfbP9X5jbK4uTGJo1R
 # Leni Bio Media URLs
 NEXT_PUBLIC_BIO_VIDEO_URL=https://we1ptd8elomh5s95.public.blob.vercel-storage.com/leni/videos/Pro-Eu.mp4
 NEXT_PUBLIC_BIO_PODCAST_URL=https://we1ptd8elomh5s95.public.blob.vercel-storage.com/leni/podcast/Prokaryoten_Eukaryoten_Zwei_Lebensstrategien_im_Vergleich.m4a
+
+# Supabase Configuration
+# Get these from: https://app.supabase.com/project/_/settings/api
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key-here
+
+# Leni Französisch Media URLs (optional)
+NEXT_PUBLIC_FRANZOESISCH_VIDEO_URL=
+NEXT_PUBLIC_FRANZOESISCH_PODCAST_URL=
