--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,6 @@
   "framework": "nextjs",
   "buildCommand": "npm run build",
   "installCommand": "npm install",
-  "outputDirectory": ".next"
+  "outputDirectory": ".next",
+  "_comment": "Physics module deployed 2026-01-04"
 }
